**Bug Fixes** - Fixed Lightning Rod M1 master not canceling when dying during it. - Fixed Vorpal's display counter being incorrect. - Fixed Enhanced title not working with Chain Heal.
**Addtions**
- Added 7 new mobs for waves 100+, added some mobs to the Extreme difficulty as well.

**Changes**
- Onslaught now gives +1 Aspirant Pouch per complete rotation (1 pouch at 15 minutes, 2 at 30min, 3 at 45min, etc....)
- Made certain boss abilities deal true damage now.
- Reduced particle density on wave 100 boss abilities.
- Removed some firework effects from low level mobs.
- Wave 100 and 110 boss are now immune silence de-buffs.
- Increased max health damage cap from 800 to 1500.
- DOT damage against wave 100 boss now only reflects 50% when its reflecting damage.

Berserker
- M2 Bloodlust, increased second strike damage from 20% to 35%.

Conjurer
- Astral Plague no longer stacks with itself.

Anchor
- Lowered damage reduction per cap from 5% to 3%.
- Lowered upgrade scale from 0.9% per level to 0.5% (max 55% at 5/5).
- Added 4% speed bonus.

Oracle
- Added 6% skill crit chance bonus.
- Added 8% skill crit multiplier bonus.

Momentum
- Added 5 EPH bonus.
- Added 6% skill crit chance bonus.

Conduit
- Added 10% skill crit multiplier bonus.

Huntsman
- Increased skill crit chance bonus from 5% to 10%.

Flux
- Added 20% skill crit multiplier bonus.